init-system-helpers (1.28) UNRELEASED; urgency=medium

  * invoke-rc.d: Fix actions to run under systemd if there is no init.d
    script. (Closes: #747851)

 -- Martin Pitt <mpitt@debian.org>  Tue, 26 Jan 2016 11:38:28 +0100

init-system-helpers (1.27) unstable; urgency=high

  Urgency high to not further delay the sysvinit migration to testing, and to
  avoid this going into testing with breaking file-rc.

  * Add debian/clean to remove script/*1.p. (Closes: #812586)
  * Version the conflict to file-rc, 0.8.17 now works fine with the moved
    update-rc.d and invoke-rc.d.

 -- Martin Pitt <mpitt@debian.org>  Tue, 26 Jan 2016 11:35:49 +0100

init-system-helpers (1.26) unstable; urgency=medium

  * Drop upstart as an alternative init dependency, as the package got
    removed.
  * Conflict to current openrc version <= 0.18.3-1, to stop the upgrade before
    running into the update-rc.d file conflict. (Closes: #811662)
    This assumes that the next openrc upload diverts update-rc.d
    (see #811708).

 -- Martin Pitt <mpitt@debian.org>  Fri, 22 Jan 2016 16:02:24 +0100

init-system-helpers (1.25) unstable; urgency=medium

  [ Andreas Henriksson ]
  * Import invoke-rc.d + update-rc.d from sysvinit 2.88dsf-59.2
    (see #805487)
  * Import service from sysvinit 2.88dsf-59.2
  * Move service files into non-specific subdirectory
  * init-system-helpers: Ship invoke-rc.d, update-rc.d and service
  * Only pod2man init-system-helpers script for now
  * update-rc.d: drop old fallback path for insserv
  * update-rc.d: only use insserv if available
  * Raise init-system-helpers Priority to required

  [ Martin Pitt ]
  * Update i-s-h package description to describe the newly moved tools.
  * Make init depend on init-system-helpers, to ensure the availability of
    invoke-rc.d and update-rc.d if/once sysvinit-utils becomes non-essential.

 -- Martin Pitt <mpitt@debian.org>  Mon, 18 Jan 2016 15:13:20 +0100

init-system-helpers (1.24) unstable; urgency=medium
